added basic form html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
-    <title>AI-Title-Generator</title>
+    <title>AI-Content-Title-Generator</title>
   </head>
   <body>
-    <h1>AI-Title-Generator</h1>
+    <header>
+      <h1>AI-Content-Title-Generator</h1>
+    </header>
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter a topic"
+          required
+          autofocus
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div>Display results here...</div>
+    </main>
     <footer>
       This AI project was coded by
       <a href="https://github.com/lienta3" target="_blank"> Lien Ta</a> and is
