--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/style.css" />
-    <title>AI-Content-Title-Generator</title>
+    <title>AI Hook Title Generator</title>
   </head>
   <body>
     <div class="container">
