--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <header>
-        <h1>AI-Content-Title-Generator</h1>
+        <h1>AI Hook Title Generator</h1>
       </header>
       <main>
         <form id="title-generator-form">
